--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   sqflite: ^2.0.0+3
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
